--- a/index.html
+++ b/index.html
@@ -2,27 +2,73 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Mariam's Personal Site 🩷</title>
+        <title>Mariam's Personal Site</title>
     </head>
     <body>
-        <img src="Mariam's photo.png" alt="Mariam's Photo" width="200" height="200">
-        <h1>🩷 Mariam Mohamed 🩷</h1>
-        <p><em>A Student at <a href="https://www.alexu.edu.eg/">Alexandria University</a></em></p>
-        <p>Practising web development. This page is part of my learning journey. Still learning, still experimenting.  But having fun along the way!</p>
+        <table cellspacing="20">
+            <tr>
+                <td><img src="Mariam's photo.png" alt="Mariam's Photo" width="200" height="200"></td>
+                <td>
+                    <h1>Mariam Mohamed 🩷</h1>
+                    <p><em>A Student at <a href="https://www.alexu.edu.eg/">Alexandria University</a></em></p>
+                    <p>Practising web development. This page is part of my learning journey. Still learning, still experimenting.  But having fun along the way!</p>
+                </td>
+            </tr>
+        </table>
         <hr>
         <h3>Education</h3>
+        <table cellspacing="10">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Degree</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2021-2024</td>
+                    <td>thanaweya amma degree</td>
+               </tr>
+                <tr>
+                    <td>2024-current</td>
+                    <td>Chemical Engineering bachelor's degree</td>
+               </tr>
+            </tbody>
+        </table>
+        <hr>
+        <h3>Skills</h3>
+        <table cellspacing="10">
+            <tr>
+                <td>
+                    <table>
+                        <tr>
+                            <td>AutoCAD</td>
+                            <td>⭐⭐⭐</td>
+                        <tr>
+                            <td>Microsoft Office</td>
+                            <td>⭐⭐⭐⭐</td>
+                        </tr>
+                            <td>Editing</td>
+                            <td>⭐⭐</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+
+                </td>
+            </tr>
+        </table>
+        <hr>
+        <h3>Languages</h3>
         <ul>
-            <li>Studies at Faculty Of Engineering, Chemical Engineering Department</li>
-            <li>Graduation Year: 2028</li>
-            <li>Can use AutoCAD</li>
-            <li>Has basic knowledge of HTML and Python</li>
-            <li>Spoken languages: Arabic, English, French</li>
-            </ul>
+            <li>Arabic (native)</li>
+            <li>English (intermediate)</li>
+            <li>French (basic)</li>
+        </ul>
         <hr>
         <h3>Hobbies & Interests</h3>
         <ol>
             <li>Painting</li>
-            <li>Listening to music</li>
             <li>Learning new skills</li>
         </ol>
         <a href="contact.html">Contact Me</a>
