--- a/contact.html
+++ b/contact.html
@@ -11,4 +11,16 @@
             <li>Email: mariamabdelmageed2006@gmail.com</li>
             <li><a href="https://www.facebook.com/share/1Bj8GsHxQ2/">Facebook</A> </li>
             <li><a href="https://www.linkedin.com/in/mariam-mohamed-13872b374?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a></li>
+        <hr>
+        <form action="mailto:mariamabdelmageed2006@gmail.com" method="post" enctype="text/plain">
+            <label>Your Name:</label>
+            <input type="text" name="yourName" value=""><br>
+            <label>Your Email:</label>
+            <input type="email" name="yourEmail" value=""><br>
+            <label>Your Message:</label><br>
+            <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+            <input type="submit" name="">
             
+        </form>  
+    </body>
+</html>
